--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "autoprefixer": "^9.7.4",
+    "concurrently": "^5.1.0",
     "postcss-cli": "^7.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -16,7 +17,7 @@
     "tailwindcss": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"postcss src/tailwind.css -o src/index.css -w\" \"react-scripts start\"",
     "build": "yarn build:tailwind && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
