--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "@testing-library/user-event": "^7.1.2",
     "autoprefixer": "^9.7.4",
     "concurrently": "^5.1.0",
+    "moment": "^2.24.0",
     "postcss-cli": "^7.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "styled-components": "^5.0.1",
     "tailwindcss": "^1.2.0"
   },
   "scripts": {
